--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -74,7 +74,7 @@ $$
 | D | 0.125 | 1.5  | 0.1875  | `000`  | 3 |
 
 
-위 두 표에서 보듯이, 첫 번째 정보 묶음의 섀넌 엔트로피는 1이다. 두 번째 묶음의 엔트로피는 0.55다. 후자가 전자의 대략 절반이라는 점은 정보의 분포에 따라서 이를 인코딩할 때 가장 큰 엔트로피의 상황보다 효율적인 방법이 존재함을 보여준다. 
+위 두 표에서 보듯이, 첫 번째 정보 묶음의 섀넌 엔트로피는 1이다. 두 번째 묶음의 섀넌 엔트로피는 0.875다. 후자가 전자보다 작다. 이는 정보의 분포에 따라서 엔트로피가 가장 무질서한, 즉 가장 클 때보다 효율적인 인코딩 방법이 존재함을 보여준다. 
 
 ## 오지랖: Cross Entropy
 
