--- a/posts/computer-tool/2022-12-22-my-domains.qmd
+++ b/posts/computer-tool/2022-12-22-my-domains.qmd
@@ -40,7 +40,7 @@ draft: false
 
 ## GitHub에 보유 도메인 소유 증명하기 
 
-GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 html 문서를 전달하는 데에는 이 보다 싸고 편리한 서비스를 찾기 어려울 것이다. GitHub Pages에는 외부 도메인을 연결할 수 있다. 다만 연결을 위해 몇 가지 절차를 거쳐야 한다. 
+GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 html 문서를 전달하는 데에는 이 보다 싸고 편ㅗ한 서비스를 찾기 어려울 것이다. GitHub Pages에는 외부 도메인을 연결할 수 있다. 다만 연결을 위해 몇 가지 절차를 거쳐야 한다. 
 
 ### 도메인 확인하기 1 (GitHub)
 
@@ -85,7 +85,7 @@ GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 h
 
 위 그림에서 보듯이 유형을 "CNAME"으로 잡는다. 이제 구입한 도메인 앞에 접두어(하위 도메인)이 들어간다. 가장 흔하게 쓸 수 있는 것이 `www`다. 즉, `www.lostineconomics.com`을 치면 어디로 포워딩되어야 하는지를 표시하면 된다. 호스트 이름이 `www`가 되고, 데이터는 `anarinsk.github.io`가 된다. 
 
-주의할 점; 데이터에 해당 것허브 페이지스의 주소가 `/{리포시터리-이름}`까지 전부 전달되어야 할 것 같지만, 깃허브 페이지스의 최상위 페이지까지만 DNS에 전달해야 한다. 이후 과정은 연결은 GitHub Pages의 몫이다. `/`가 들어간 디렉토리는 전달할 수 없다. `{이용자-ID}.github.io`까지만 전달하면 해당 깃허브 페이지스의 디렉토리 자원과 도메인의 연결이 자동적으로 이루어진다. 
+주의할 점; 데이터에 해당 것허브 페이지스의 주소가 `/{리포지터리-이름}`까지 전부 전달되어야 할 것 같지만, 깃허브 페이지스의 최상위 페이지까지만 DNS에 전달해야 한다. 이후 과정은 연결은 GitHub Pages의 몫이다. `/`가 들어간 디렉토리는 전달할 수 없다. `{이용자-ID}.github.io`까지만 전달하면 해당 깃허브 페이지스의 디렉토리 자원과 도메인의 연결이 자동적으로 이루어진다. 
 
 해당 도메인이 깃허브 페이지까지 잘 연결되는지 보려면, 아래의 셸 명령을 활용해보자. 
 
