--- a/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
+++ b/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
@@ -86,6 +86,10 @@ $$
 
 그런데 친구 네트워크가 분산이 0이 되는 형태로 균질하지 않다면, 즉 친구 숫자의 분포가 존재하는 이상 $\sigma^2 > 0$이 성립할 수 밖에 없다. 친구 숫자가 균등하지 않는 이상 평균적으로 친구의 친구의 숫자는 내 친구의 숫자보다 크게 된다.
 
+:::{.column-margin}
+재미 삼아서 극단적인 경우를 만들어 보자. $n$명의 네트워크에서 1명과 $n-1$ 명이 바퀴살 구조로 연결되어 있다고 하자. 이때, $n-1$ 명의 친구 유일한 친구 1명의 평균 친구 숫자는 $n-1$ 명이다. 이 집단에서 $n-1$ 명은 자신의 친구 숫자 $1$ 명보다 친구의 친구의 숫자가 $n-1$ 명으로 압도적으로 크다. 이 집단에서 무작위로 1명을 뽑을 경우 거의 모든 경우 내 친구의 숫자보다 친구의 친구의 숫자가 크다고 느낄 것이다. 
+:::
+
 ### Intuitively... 
 
 보다 직관적으로 설명할 수 있을까? 인구 혹은 그래프 전체에 대해서 보면, 각 노드가 지니는 차수의 분포에서 친구의 평균적인 크기(수)가 결정된다. 반면, '친구의 친구'의 크기 어떨까? 만일 어떤 개인이 많은 친구를 지니고 있다면, 그는 여러 사람의 친구로 등장할 것이다. 따라서 친구의 친구의 숫자를 평균하면 이렇게 높은 연결성을 지닌 개체가 분포에 여러 번 등장하게 된다. 따라서 친구의 친구의 수를 생각하면 평균적인 '내' 친구의 수보다 크다! 
