--- a/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
+++ b/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
@@ -87,7 +87,20 @@ $$
 그런데 친구 네트워크가 분산이 0이 되는 형태로 균질하지 않다면, 즉 친구 숫자의 분포가 존재하는 이상 $\sigma^2 > 0$이 성립할 수 밖에 없다. 친구 숫자가 균등하지 않는 이상 평균적으로 친구의 친구의 숫자는 내 친구의 숫자보다 크게 된다.
 
 :::{.column-margin}
-재미 삼아서 극단적인 경우를 만들어 보자. $n$명의 네트워크에서 1명과 $n-1$ 명이 바퀴살 구조로 연결되어 있다고 하자. 이때, $n-1$ 명의 친구 유일한 친구 1명의 평균 친구 숫자는 $n-1$ 명이다. 이 집단에서 $n-1$ 명은 자신의 친구 숫자 $1$ 명보다 친구의 친구의 숫자가 $n-1$ 명으로 압도적으로 크다. 이 집단에서 무작위로 1명을 뽑을 경우 거의 모든 경우 내 친구의 숫자보다 친구의 친구의 숫자가 크다고 느낄 것이다. 
+재미 삼아서 극단적인 경우를 만들어 보자. $n$명의 네트워크에서 1명과 $n-1$ 명이 바퀴살 구조로 연결되어 있다고 하자. 이때, $n-1$ 명의 유일한 친구 1명의 평균 친구 숫자는 $n-1$ 명이다. 이 집단에서 $n-1$ 명은 자신의 친구 숫자 $1$ 명보다 친구의 친구의 숫자가 $n-1$ 명으로 압도적으로 크다. 이 집단에서 무작위로 1명을 뽑을 경우 거의 모든 경우 내 친구의 숫자보다 친구의 친구의 숫자가 크다고 느낄 것이다. 평균 친구 숫자는 아래와 같다. 
+
+$$
+\mu = \dfrac{(n-1)\cdot1 + (n-1)\cdot1}{n} = \dfrac{2(n-1)}{n}
+$$
+
+한편, 친구의 친구 숫자의 평균은 다음과 같다. 
+
+$$
+\mathbb E(d(v^f)) = \dfrac{(n-1)(n-1) + 1\cdot1}{n} = \dfrac{n^2 - 2n +2}{n}
+$$
+
+$n \geq 2$인 경우 $E(d(v^f)) \geq \mu$가 성립한다. 
+
 :::
 
 ### Intuitively... 
