--- a/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
+++ b/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
@@ -105,6 +105,4 @@ $n \geq 2$인 경우 $E(d(v^f)) \geq \mu$가 성립한다.
 
 ### Intuitively... 
 
-보다 직관적으로 설명할 수 있을까? 인구 혹은 그래프 전체에 대해서 보면, 각 노드가 지니는 차수의 분포에서 친구의 평균적인 크기(수)가 결정된다. 반면, '친구의 친구'의 크기 어떨까? 만일 어떤 개인이 많은 친구를 지니고 있다면, 그는 여러 사람의 친구로 등장할 것이다. 따라서 친구의 친구의 숫자를 평균하면 이렇게 높은 연결성을 지닌 개체가 분포에 여러 번 등장하게 된다. 따라서 친구의 친구의 수를 생각하면 평균적인 '내' 친구의 수보다 크다! 
-
-<https://www.youtube.com/watch?v=sF1wy6OkeLE>
+보다 직관적으로 말해보겠다. 인구 혹은 그래프 전체에 대해서 보자. 개인(개별 노드)의 친구 숫자(차수)의 분포에서 인구 전체에서 평균적인 친구의 숫자가 결정된다. 이때 개인의 친구 숫자는 계산에 한 번만 반영된다. 한편 '친구의 친구'의 숫자는 어떨까? 한 개인이 많은 친구를 지니고 있다고 하자. 그는 누군가의 친구로 여러 번 등장할 것이다. 따라서 '친구의 친구'의 숫자 계산할 때 친구가 많은 사람은 여러 번 더해진다. 친구가 많은 사람, 즉 큰 숫자가 여러 번 더해지게 되므로 친구의 친구의 숫자는 커지게 될 것이다! [이 동영상](<https://www.youtube.com/watch?v=sF1wy6OkeLE>)을 참고하자. 
