--- a/posts/computer-tool/2022-07-07-pt-with-quarto.qmd
+++ b/posts/computer-tool/2022-07-07-pt-with-quarto.qmd
@@ -3,7 +3,7 @@ title: Presentation with Reveal.js
 description: Quarto로 편하게! 
 author: "JS HUHH"
 date: "07/07/2022"
-image: "https://revealjs.com/images/logo/reveal-black-text.svg"
+image: "images/revealjs.jfif"
 categories: [computer-tool]
 draft: false
 ---
