--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -3,7 +3,7 @@ title: 스케일의 법칙
 description: 그냥 또 하나의 경제학책? 
 author: "JS HUHH"
 date: "03/13/2023"
-image: "images/the-book.jfif"
+image: "images/books_2.jfif"
 categories: [the-books, economics]
 filters:
    - lightbox
