--- a/posts/computer-tool/2023-05-11-powershell.qmd
+++ b/posts/computer-tool/2023-05-11-powershell.qmd
@@ -25,7 +25,7 @@ draft: false
 - 파워셸을 이용해 주요 소프트웨어 설치 
 - conda, ohmyposh 설정법 
 
-## Power to the Powershell 
+## Powershell을 써야 하는 이유 
 
 파워셸(이하 PS)은 원래 윈도의 CLI 도구였으나, 현재는 OS에 상관 없이 범용으로 활용될 수 있는 툴을 제공한다. 굳이 PS를 애용할 필요는 없으나 윈도를 쓴다면 PS를 굳이 쓰지 않을 이유 또한 없다. 게다가 윈도11부터 MS에서 "앱 설치 관리자"라는 녀석을 제공하는데, 이 녀석을 쓰면 macos의 `brew`, Ubuntu의 `apt`와 같은 스타일로 `winget`을 통해 패키지 관리를 할 수 있다. 때때로 미진한 점은 있지만 윈도의 거의 모든 프로그램을 `winget`을 통해 관리할 수 있다. GUI를 잘 쓰지 않는 입장에서는 편리하고 좋은 장점이다. 
 
