--- a/posts/computer-tool/2023-05-11-powershell.qmd
+++ b/posts/computer-tool/2023-05-11-powershell.qmd
@@ -27,7 +27,7 @@ draft: false
 
 ## Powershell을 써야 하는 이유 
 
-파워셸(이하 PS)은 원래 윈도의 CLI 도구였으나, 현재는 OS에 상관 없이 범용으로 활용될 수 있는 도구다. 굳이 PS를 애용할 필요는 없으나, 적어도 윈도를 쓴다면 굳이 쓰지 않을 이유도 없다. 윈도11부터 MS에서 "앱 설치 관리자"라는 녀석을 제공하는데, 이 녀석을 쓰면 macos의 `brew`, Ubuntu의 `apt`와 같은 스타일로 `winget`을 통해 패키지 관리를 할 수 있다. 때때로 미진한 점은 있지만 윈도의 거의 모든 프로그램을 `winget`을 통해 관리할 수 있다. GUI를 잘 쓰지 않는 입장에서는 편리하고 좋은 방식이고, CLI 도구인 PS에서 편리하게 활용할 수 있다.  
+파워셸(이하 PS)은 원래 윈도의 CLI 도구였으나, 현재는 OS에 상관 없이 범용으로 활용될 수 있는 도구다. 굳이 PS를 애용할 필요는 없으나, 적어도 윈도를 쓴다면 굳이 쓰지 않을 이유도 없다. 윈도11부터 MS에서 "앱 설치 관리자"라는 녀석을 제공하는데, 이 녀석을 쓰면 macos의 `brew`, Ubuntu의 `apt`와 같은 스타일로 `winget`을 통해 패키지 관리를 할 수 있다. 때때로 미진한 점은 있지만 윈도의 거의 모든 프로그램을 `winget`을 통해 관리할 수 있다. GUI 대신 쓸 수 있다는 점에서 `winget`은 좋은 도구이고, PS 위에 올려 쓰면 보다 편리하다.
 
 :::{.column-margin}
 이 글은 어쩌다가 윈도11을 다시 깔게 된 나 놈을 위해 남기는 글이다. 훗날 현재 과정을 기억하지 못하게 될 것이기 때문에... 
@@ -36,12 +36,12 @@ draft: false
 ## Install 
 
 ### Prelim
-윈도11을 갓 설치했다면, "Windows Powershell"이 설치되어 있다. 이 녀석을 쓰지는 않을 것이다. 우선 다음 두 개를 갖추도록 하자. 설치하는 방법은 구글링을 하시면 금방 나온다. 
+윈도11을 갓 설치했다고 하자. 여기에는 "Windows Powershell"이 설치되어 있다. 이 녀석을 계속 쓰지는 않을 것이다. 우선 아래의 두 개 도구를 확인하도록 하자. 설치하는 방법은 구글링을 하시면 금방 나온다. 
 
 1. Windows Terminal 
 2. "앱 설치 관리자"
 
-1은 윈도11을 깔고 최신 버전으로 업데이트하면 자동으로 깔려 나온다. 이왕이면 기본 터미널 앱 자체를 "명령 프롬프트"에서 이 녀석으로 바꾸도록 하자. 2는 Microsoft Store에서 다운 받아 설치할 수 있다. 역시 업데이트하면 기본으로 깔려서 나온다. 
+둘 모두 MS Store에서 찾아 설치하면 된다. 이왕이면 기본 터미널 앱 자체를 "명령 프롬프트"에서 이 녀석으로 바꾸도록 하자. 
 
 ### 설치 
 이제 터미널로 들어가서 "명령 프롬프트" 혹은 "Windows Powershell" 둘 중 하나에서 파워셸을 깔아보자. 
@@ -51,7 +51,7 @@ draft: false
 ```
 
 ### Post-job
-설치가 완료된 이후 몇 가지 후처리를 하도록 하자. 
+설치가 완료된 이후 몇 가지 후처리를 하면 좋다. 
 
 1. Windows Terminal에서 기본 프로필을 "Windows Powershell"에서 "Powershell"로 바꾸자. 
 2. 최신 버전의 Windows Terminal에서는 "관리자 권한 실행" 옵션이 있다. 이 녀석도 켜도록 하자. 
