--- a/posts/computer-tool/2023-05-16-workflow-with-vscode.qmd
+++ b/posts/computer-tool/2023-05-16-workflow-with-vscode.qmd
@@ -26,11 +26,11 @@ draft: false
 
 ## 왜 PowerShell, miniconda, VS Code를 써야 하는가? 
 
-이 프로덕트들이 '최선'의 선택이 아니다. 윈도11에서 작업을 할 때, 최대한 단순하게 Python 환경을 만드는데 활용할 프로덕트 묶음이다. 
+이 묶음이 '최선'의 선택이 아니다. 다만, 이 앱들은 윈도11 위에서 작업할 때 (내 기준에서) 최대한 단순하고 일관된 Python 환경을 만드는 데 필요하다. 
 
 - PowerShell(PS): 셸을 써서 miniconda를 통해 기본적인 파이썬 환경을 제어할 것이다. 따라서 PS가 기본적으로 필요하다. 
 - miniconda: 본격적인 개발 용도라면 conda 가상 환경이 충분하지 않다. 하지만 개인 프로젝트 용도로 이 만큼 편리한 것도 없다. 불필요한 앱들이 따라 붙는 anaconda 대신 우리는 단촐하게 miniconda를 쓸 것이다. 
-- VS Code: Python 개발 환경과 Jupyter 환경 모두를 편리하게 쓸 수 있다. 다른 선택의 여지를 돌아볼 필요조차 없을 만큼 윈도에서는 최강의 에디터이다. 
+- VS Code: Python 개발 환경과 Jupyter 환경 모두를 편리하게 부릴 수 있다. 다른 선택의 여지를 돌아볼 필요조차 없을 만큼 윈도에서는 최강의 에디터이다. 
 
 ## Prelim 
 
