--- a/posts/computer-tool/2023-05-11-powershell.qmd
+++ b/posts/computer-tool/2023-05-11-powershell.qmd
@@ -27,7 +27,7 @@ draft: false
 
 ## Powershell을 써야 하는 이유 
 
-파워셸(이하 PS)은 원래 윈도의 CLI 도구였으나, 현재는 OS에 상관 없이 범용으로 활용될 수 있는 도구다. 굳이 PS를 애용할 필요는 없으나, 적어도 윈도를 쓴다면 굳이 쓰지 않을 이유도 없다. 윈도11부터 MS에서 "앱 설치 관리자"라는 녀석을 제공하는데, 이 녀석을 쓰면 macos의 `brew`, Ubuntu의 `apt`와 같은 스타일로 `winget`을 통해 패키지 관리를 할 수 있다. 때때로 미진한 점은 있지만 윈도의 거의 모든 프로그램을 `winget`을 통해 관리할 수 있다. GUI 대신 쓸 수 있다는 점에서 `winget`은 좋은 도구이고, PS 위에 올려 쓰면 보다 편리하다.
+파워셸(이하 PS)은 원래 윈도의 CLI 도구였으나, 현재는 OS에 상관 없이 범용으로 활용할 수 있는 도구다. 굳이 PS를 써야만 하는 것은 아니지만, 적어도 윈도를 쓴다면 피할 이유도 없다. 윈도11부터 MS에서 "앱 설치 관리자"라는 녀석을 제공하는데, 이 녀석을 쓰면 macos의 `brew`, Ubuntu의 `apt`와 같은 스타일로 `winget`을 통해 셸을 통해 패키지 관리를 할 수 있다. 다소 아쉬운 대목이 있지만 윈도의 거의 모든 프로그램을 `winget`을 통해 관리하게 되는 것은 근사한 일이다. 
 
 :::{.column-margin}
 이 글은 어쩌다가 윈도11을 다시 깔게 된 나 놈을 위해 남기는 글이다. 훗날 현재 과정을 기억하지 못하게 될 것이기 때문에... 
