--- a/posts/computer-tool/2023-05-11-powershell.qmd
+++ b/posts/computer-tool/2023-05-11-powershell.qmd
@@ -36,10 +36,10 @@ draft: false
 ## Install 
 
 ### Prelim
-윈도11을 갓 설치했다고 하자. 여기에는 "Windows Powershell"이 설치되어 있다. 이 녀석을 계속 쓰지는 않을 것이다. 우선 아래의 두 개 도구를 확인하도록 하자. 설치하는 방법은 구글링을 하시면 금방 나온다. 
+윈도11을 갓 설치했다고 하자. 여기에는 "Windows Powershell"이 설치되어 있다. 이 녀석을 계속 쓰지는 않을 것이다. 우선 아래의 두 개 도구를 확인하도록 하자. 설치하는 방법은 구글링을 하면 되겠다. 
 
-1. Windows Terminal 
-2. "앱 설치 관리자"
+1. Windows Terminal: "명령 프롬프트" 대신 쓸 터미널 앱 
+2. "앱 설치 관리자": `winget` 활성화 
 
 둘 모두 MS Store에서 찾아 설치하면 된다. 이왕이면 기본 터미널 앱 자체를 "명령 프롬프트"에서 이 녀석으로 바꾸도록 하자. 
 
@@ -51,17 +51,17 @@ draft: false
 ```
 
 ### Post-job
-설치가 완료된 이후 몇 가지 후처리를 하면 좋다. 
+설치가 완료된 이후 "설정" 항목에서 몇 가지 후처리를 하면 좋다. 
 
-1. Windows Terminal에서 기본 프로필을 "Windows Powershell"에서 "Powershell"로 바꾸자. 
-2. 최신 버전의 Windows Terminal에서는 "관리자 권한 실행" 옵션이 있다. 이 녀석도 켜도록 하자. 
+1. 기본 프로필을 "Windows Powershell"에서 "Powershell"로 바꾸자. 
+2. 최신 버전에서는 "관리자 권한 실행" 옵션이 있다. 이 녀석도 켜도록 하자. 
 3. "모양" 항목을 찾아서 몇 가지 폰트 설정을 해줘야 한다. 폰트 선택은 취향을 따르면 된다. 내가 쓰는 폰트는 아래와 같다. 
 
 [Hack Nerd](https://www.nerdfonts.com/font-downloads), [D2Coding Nerd](https://www.dante2k.com/602)
 
 ## Install Apps 
 
-이제 앱들을 설치하면 된다. json을 만들어서 일괄 설치할 수도 있지만 문제가 생기면 대응이 필요하니 필요한 앱을 일단 하나씩 까는 것이 좋겠다. 내가 쓰는 앱들이다. 
+이제 필요한 앱들을 명령을 통해 설치하면 된다. json을 만들어서 일괄 설치할 수도 있지만 문제가 생기면 대응이 필요하니 필요한 앱을 일단 하나씩 까는 것도 괜찮다. 아래는 내가 쓰는 앱들이다. 
 
 ```powershell
 winget install --id=Microsoft.PowerToys  -e
@@ -74,13 +74,13 @@ winget install --id=Obsidian.Obsidian  -e
 winget install --id=Posit.Quarto  -e
 ```
 
-금새 눈치 챘겠지만, `install` 명령어 뒤에 해당 앱의 id를 넣어 주는 식으로 구성되어 있다. 내게 필요한 앱이 `winget`을 통한 설치 경로를 제공하는지 알고 싶다면 [여기](https://winstall.app/)를 방문해서 검색하면 된다. 
+금새 눈치 챘겠지만 `install` 명령어 뒤에 해당 앱의 id를 넣어 주는 식으로 구성되어 있다. 내게 필요한 앱이 `winget`을 통한 설치 경로를 제공하는지 알고 싶다면 [여기](https://winstall.app/)를 방문해서 검색하면 된다. 
 
-또 하나 보고 가자. 위에 보다시피 설치 파일을 다운받아서 깔았던 거의 대부분의 소프트웨어가 `winget`을 통해 제공된다. 
+설치 파일을 다운받아서 깔았던 거의 대부분의 앱들을 `winget`을 통해 설치할 수 있다. 
 
 ## Conda 설정 
 
-다른 것들은 설치 이후에 대체로 쓰던대로 쓰면 된다. 별도의 언급이 필요한 두 개가 miniconda와 OhMyPosh이다. 하나씩 살펴보자. 이왕 터미널을 쓸 바에야 그냥 miniconda3를 쓰는 것이 낫다. 그래서 미니콘다(이하 콘다)를 설치했다. 
+다른 것들은 설치 이후에 대체로 쓰던대로 쓰면 된다. 별도의 언급이 필요한 두 개가 miniconda와 OhMyPosh이다. 하나씩 살펴보자. 이왕 터미널을 쓸 바에야 anaconda 대신 miniconda3를 쓰는 것이 낫다. 아래에서는 미니콘다를 콘다로 부르도록 하자.  
 
 콘다를 설치한 이후 초기화가 필요하다. 설치 이후 터미널을 재시작하고 아래와 같이 입력한다. 
 
@@ -92,13 +92,13 @@ winget install --id=Posit.Quarto  -e
 이 부분은 [여기](https://jh-bk.tistory.com/57)를 참고했다. 
 :::
 
-콘다가 터미널의 종류 별로 필요한 파일을 감지한다. 나오는 정보 중에서 아래 두 줄이 개인 프로필 관련 설정이 담김 폴더이다. 해당 폴더가 제대로 설정되어 있는지 확인하려면 아래를 실행하자. 
+콘다가 터미널의 종류 별로 필요한 설정을 생성한다. 화면에 표시되는 정보 중에서 아래 두 줄이 개인 프로필 관련 설정이 담김 폴더이다. 해당 폴더가 제대로 설정되어 있는지 확인하려면 아래를 실행하자. 
 
 ```powershell
 > test-path $profile
 ```
 
-여기서 `false`가 뜬다면 프로필을 로드하는 경로에 문제가 생긴 것이다. `conda init powershell`을 다시 실행해보자. 자세히 보면(아마도 맨 끝에 두 개), `.PS1`을 로드하는 경로 중에 깨진 것이 존재할 것이다. 이 경우 `$profle`을 로드하는 경로를 강제로 설정해줘야 한다. 이 문제 해결은 옆의 link 안의 내용을 참고하면 된다. `$profile`의 경로를 강제로 설정한 후  `conda init powershell`을 다시 실행하자. 만일 경로에 문제가 없다면 PS로 돌아와서 가상 환경이 잘 설정되어 있는지 확인하면 된다. 
+여기서 `false`가 뜬다면 프로필을 로드하는 경로에 문제가 생긴 것이다. `conda init powershell`을 다시 실행해보자. 자세히 보면(아마도 맨 끝에 두 개), `.PS1`을 로드하는 경로 중에 깨진 것이 존재할 것이다. 이 경우 `$profle`을 로드하는 경로를 강제로 설정해줘야 한다. 이 문제 해결은 옆의 link의 내용을 참고하면 된다. `$profile`의 경로를 강제로 설정한 후  `conda init powershell`을 다시 실행하자. 만일 경로에 문제가 없다면 PS로 돌아와서 가상 환경이 잘 설정되어 있는지 확인하면 된다. 
 
 
 :::{.column-margin}
@@ -129,7 +129,7 @@ oh-my-posh init pwsh --config "$env:POSH_THEMES_PATH/jandedobbeleer.omp.json" | 
 
 ### 업데이트 시 테마가 초기화되는 문제 
 
-`$env:POSH_THEMES_PATH`의 위치에 따라서 업데이트 시 테마까지 함께 업데이트가 된다. 만일 해당 테마의 json 파일을 바꾸었다면 이 역시 사라지게 된다. 어차피 테마 파일의 위치는 자유롭게 바꿀 수 있으니까 자신이 커스텀한 테마 파일의 위치를 바꾸고 녀석을 로드하면 된다. 
+`$env:POSH_THEMES_PATH`의 위치에 따라서 업데이트 시 테마까지 함께 업데이트가 된다. 만일 해당 테마의 json 파일을 바꾸었다면 업데이트가 되면서 초기화된다. 어차피 테마 파일의 위치는 자유롭게 바꿀 수 있으니까 자신이 커스텀한 테마 파일의 위치를 바꾸고 녀석을 로드하면 된다. 
 
 ### Python 가상 환경이 안보이는 경우 
 
