--- a/posts/computer-tool/2023-05-29-rye.qmd
+++ b/posts/computer-tool/2023-05-29-rye.qmd
@@ -66,7 +66,7 @@ Rye 앱 자체에 관한 업데이트와 삭제는 아래와 같다.
 가상 환경의 개별 설정은 `project.toml` 파일을 통해서 관리된다. 버전 관리 등의 자세한 내용은 [공식 문서](https://rye-up.com/guide/pyproject/)를 참고하자. 
 
 :::{.column-margin}
-패키지 의존성 관리의 좋은 예를 소개한다. pytorch의 cuda 버전을 깔아야 한다고 하자. rye의 디폴트 저장소에는 해당 내용이 없다. 따라서 해당 `whl`을 끌고 오기 위해서는 별도의 저장소를 저장해줘야 한다. 이 지정은 프로젝트 단위로 할 수 있고 전체 설정으로도 할 수 있다. 자세한 내용은 [여기](https://github.com/anarinsk/test_pytorch-install#with-rye--vs-code-20230530)를 확인하도록 하자. 
+패키지 의존성 관리의 좋은 예를 소개한다. pytorch의 cuda 버전을 깔아야 한다고 하자. rye의 디폴트 저장소에는 해당 내용이 없다. 따라서 해당 `whl`을 끌고 오기 위해서는 별도의 저장소를 저장해줘야 한다. 이 지정은 프로젝트 단위로 할 수 있고 전체 설정으로도 할 수 있다. 자세한 내용은 [여기](https://github.com/anarinsk/test_pytorch-install#20230530-rye--vs-code)를 확인하도록 하자. 
 :::
 
 ## VS Code에서 `.ipynb` 작업하기 
