--- a/posts/computer-tool/2023-05-29-rye.qmd
+++ b/posts/computer-tool/2023-05-29-rye.qmd
@@ -23,7 +23,7 @@ Rye를 이용해 편리하게 가상 환경을 구축해보자.
 1. 파이썬 버전 관리 
 2. 패키지 의존성 및 버전 관리 
 
-파이썬 버전을 관리하는 pyenv와 패키지 의존성을 관리하는 [poetry](https://python-poetry.org/)를 함께 부릴 수도 있다. 다만 이 녀석들을 별도로 다루는 게 그리 직관적이지 않고 활용할 수 있는 OS에도 제약이 존재한다. conda 정도의 편리함과 범용성을 지니는 Python 가상 환견은 없을까? 
+파이썬 버전을 관리하는 pyenv와 패키지 의존성을 관리하는 [poetry](https://python-poetry.org/)를 함께 부릴 수도 있다. 다만 이 녀석들을 별도로 다루는 게 그리 직관적이지 않고 활용할 수 있는 OS에도 제약이 존재한다. conda 정도의 편리함과 범용성을 지니는 Python 가상 환경은 없을까? 
 
 Rye는 파이썬 버전 관리에서 패키지 설치의 의존성 관리까지 필요한 내용을 손쉽게 지원한다. 아울러 프로젝트와 가상 환경이 함께 따라 다니기 때문에 환경 자체를 별도로 관리해야 하는 conda 보다 관리가 수월하다. 유일한 단점이라면 프로젝트가 극히 초기라는 것인데, 이 정도의 사용성이라면 빠르게 자리를 잡지 않을까 기대해본다. 
 
@@ -35,7 +35,7 @@ Rye는 파이썬 버전 관리에서 패키지 설치의 의존성 관리까지 
 
 ## 설치 및 앱 관리  
 
-OS에 맞게 Rye를 설치해주자. 윈도의 경우는 `winget`을 통한 설치는 아직 지원되지 않고, macos에서는 가이드에는 없지만 `brew`를 통해 설치할 수 있다. 
+OS에 맞게 Rye를 설치해주자. 윈도의 경우는 `winget`을 통한 설치는 불가능하다.Macos에서는 공식 가이드에는 없지만 `brew`로 설치할 수 있다. 
 
 :::{.column-margin}
 [설치](https://rye-up.com/guide/installation/) 항목을 참고하자. 
