--- a/posts/computer-tool/2023-05-29-rye.qmd
+++ b/posts/computer-tool/2023-05-29-rye.qmd
@@ -81,4 +81,4 @@ pip3 install torch torchvision torchaudio --index-url https://download.pytorch.o
 
 ![VS Code 커널 선택 (클릭하면 확대); (오른쪽) `커널 선택` > `다른 커널 선택` > `Python 환경` > `.venv...` 순으로 선택하면 된다.](./images/vscode_rye.png){width=70%}
 
-스크린 샷에서 보듯이 `커널 선택` > `다른 커널 선택` > `Python 환경` > `.venv...`를 택하면 된다. 해당 프로젝트 폴더 아래 `.venv` 폴더 안에 있는 파이썬 환경을 가져오게 되면, 해당 프로젝트의 파이썬 커널 밀 설치 패키지가 VS Code와 연결된다. 
+스크린 샷에서 보듯이 `커널 선택` > `다른 커널 선택` > `Python 환경` > `.venv...`를 택하면 된다. 해당 프로젝트 폴더 아래 `.venv` 폴더 안에 있는 파이썬 환경을 가져오게 되면, 해당 프로젝트의 파이썬 커널과 설치된 패키지가 VS Code의 Jupyter 환경과 연결된다. 
