--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -6,7 +6,7 @@ date: "06/26/2023"
 image: "images/proof.jfif"
 categories: [math-simple]
 #margin-header: subscribe.html
-draft: false
+draft: true
 filters:
    - lightbox
 lightbox: auto
@@ -51,7 +51,7 @@ lightbox: auto
 | F     | T     | T     |
 | F     | F     | T     |
 
-위 진리표에서 $p$가 T인 경우에는 $q$가 T일 때만 T가 된다. 즉, $p$ T라면, $p \to q$ 혹은 $\neg p \lor q$가 T가 되는 경우는 $q$가 T일 때 뿐이다. 즉, $P$의 모든 부분 집합은 $Q$에도 속해야 한다. 
+위 진리표에서 $p$가 T인 경우에는 $q$가 T일 때만 T가 된다. 즉, $p$가 T라면, $p \to q$ 혹은 $\neg p \lor q$가 T가 되는 경우는 $q$가 T일 때 뿐이다. 즉, $P$의 모든 부분 집합은 $Q$에도 속해야 한다. 
 
 ### 공진리
 
@@ -62,7 +62,7 @@ lightbox: auto
 조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \to q$의 형태로 놓고 보면 부정 명제를 만들기 까다로울 수 있다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
 
 
-일단 직관적으로 생각해보자. 배중률에 따르면 $p \to q$가 성립하지 않는 경우가 단 1개라도 존재하면 해당 부정 명제가 참이 된다. 말로 푼다면, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \to q$가 '모든'의 한정 기호를 함축하고 있다며 조건 명제의 부정은 '어떤'의 한정 기호를 함축하고 있다. 진리 집합으로 서술하면 $P' \subset P$에 대해서 $P' \cap Q^C \neq \emptyset$이 성립하면 된다.
+일단 직관적으로 생각해보자. 배중률에 따르면 $p \to q$가 성립하지 않는 경우가 단 1개라도 존재하면 해당 부정 명제가 참이 된다. 말로 푼다면, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \to q$가 '모든($\forall$)'이라는 한정 기호를 담고 있다면, 조건 명제의 부정은 '어떤($\exists$)'의 한정 기호를 지니고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
 
 ## 함수의 극한 
 
@@ -109,7 +109,7 @@ $|x-a|< \epsilon$을 만족하는 어떤 $\epsilon>0$에 대해서 다음을 만
 
 :::
 
-$\lim_{x \to a} f(x)$가 존재하는 경우는 그림에서 보듯이 매핑되는 $f(x)$를 모두 덮을 수 있는 $\delta$가 존재하는 경우이다. 이는 $\epsilon$이 아무리 작더라도 가능해야 한다. 한편 $\lim_{x \to a} f(x)$가 존재하지 않는 경우를 살펴보자. 그림에서 보듯이 L을 어떻게 설정하든지 $|f(x)-L| \geq \delta$가 성립하는 $\epsilon$의 구간을 쉽게 설정할 수 있다. 
+$\lim_{x \to a} f(x)$가 존재하는 경우는 그림에서 보듯이 매핑되는 $|f(x)-L|$를 덮을 수 있는 $\delta$가 존재하는 경우이다. 이는 $\epsilon$이 아무리 작더라도 가능해야 한다. 한편 $\lim_{x \to a} f(x)$가 존재하지 않는 경우를 살펴보자. 그림에서 보듯이 L을 어떻게 설정하든지 $|f(x)-L| \geq \delta$가 성립하는 $\epsilon$의 구간을 쉽게 설정할 수 있다. 
 
 동어반복일 수 있지만, 반대로 생각해보면 정의를 이해하는 데 도움이 될 수 있다. 
 
