--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -55,7 +55,7 @@ lightbox: auto
 
 ### 공진리
 
-아마도 '공진리(vacous truth)' 혹은 '항진'의 문제가 거슬릴 것이다. 논리로 보면 조금 이상해보일 수 있지만 진리집합으로 보면 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리상 공집합은 모든 집합의 부분 집합이 될 수 있다. 
+아마도 '공진리(vacuous truth)' 혹은 '항진'의 문제가 거슬릴 것이다. 논리로 보면 조금 이상해보일 수 있지만 진리집합으로 보면 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리상 공집합은 모든 집합의 부분 집합이 될 수 있다. 
 
 ### 조건 명제의 부정 
 
