--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -81,7 +81,7 @@ lightbox: auto
 - $x \to a$ 일 때 함수 $f(x)$의 극한값 $L$이 있다고 하자. 
 - $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 $\delta$보다 작아지는 $\delta$가 존재한다. 
 
-사실 함축의 정의를 살펴보면, '모든($\forall$)', '존재한다($\exists$)'는 의미를 분명하게 전달하기 위한 사족이다.  
+$\delta > 0$가 존재할 때, $x$를 $a$에 충분히 근접시켜서 $|f(x)| - L| < \delta$를 만족하는지를 확인한다고 생각하면 조금 이해가 쉽다. 사실 함축의 정의를 살펴보면, '모든($\forall$)', '존재한다($\exists$)'는 의미를 분명하게 전달하기 위한 사족이다.  
 
 ### 함수의 극한이 존재하지 않는 경우 
 
@@ -109,7 +109,7 @@ $|x-a|< \epsilon$을 만족하는 어떤 $\epsilon>0$에 대해서 다음을 만
 
 :::
 
-$\lim_{x \to a} f(x)$가 존재하는 경우는 그림에서 보듯이 매핑되는 $|f(x)-L|$를 덮을 수 있는 $\delta$가 존재하는 경우이다. 이는 $\epsilon$이 아무리 작더라도 가능해야 한다. 한편 $\lim_{x \to a} f(x)$가 존재하지 않는 경우를 살펴보자. 그림에서 보듯이 L을 어떻게 설정하든지 $|f(x)-L| \geq \delta$가 성립하는 $\epsilon$의 구간을 쉽게 설정할 수 있다. 
+$\lim_{x \to a} f(x)$가 존재하는 경우는 그림에서 보듯이 어떤 $\delta$가 있다고 할 때 $x$를 $a$에 근접시켜서 조건을 만족하는 것이 가능한지를 확인하면 된다. 한편 $\lim_{x \to a} f(x)$가 존재하지 않는 경우를 살펴보자. 그림에서 보듯이 L을 어떻게 설정하든지 $|f(x)-L| \geq \delta$가 성립하는 $\epsilon$의 구간을 설정할 수 있다. 
 
 동어반복일 수 있지만, 반대로 생각해보면 정의를 이해하는 데 도움이 될 수 있다. 
 
