--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -76,9 +76,9 @@ lightbox: auto
 
 쉽지 않지만 말로 풀어보자. 말이 지니는 모호함을 없애기 위해서 하나씩 끊어서 살펴보자. 
 
-- $a$ 주변에 있는 임의의 작은 $2\epsilon$ 크기의 구간을 잡는다.  
-- 해당 구간에 속하는 모든 $x$를 고려하자. 
-- $x \to a$ 일 때 함수 $f(x)$의 극한값 $L$이 있다고 하자. 
+- $a$ 주변으로 각 $\epsilon$ 크기의 구간을 잡는다.  
+- 해당 구간에 속하는 **모든** $x$를 고려하자. 
+- $x \to a$ 일 때 함수 $f(x)$의 극한값을 $L$이라고 하자. 
 - $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 $\delta$보다 작아지는 $\delta$가 존재한다. 
 
 사실 함축의 정의를 살펴보면, '모든($\forall$)', '존재한다($\exists$)'는 의미를 분명하게 전달하기 위한 사족이다.  
@@ -89,34 +89,61 @@ lightbox: auto
 
 $|x-a|< \epsilon$을 만족하는 어떤 $\epsilon>0$에 대해서 다음을 만족하는 $\delta>0$가 존재한다; $|f(x) - L| \geq \delta$. 
 
-말로 풀기는 어렵겠지만 역시 이를 말로 풀어보자. 
+역시 말로 풀기는 어렵겠지만 역시 이를 말로 풀어보자. 
 
 - $a$의 일정한 주변의 위치한 모든 $x$를 고려하자. 
 - $|f(x)-L|$ 값을 $\delta$ 보다 낮게 줄일 수 없다. 
 
 이 경우는 $\lim_{x \to a}f(x)$는 존재하지 않는다. 
 
+## 진리 집합 
+
+조건 명제는 속임수를 품고 있을 수 있다. 진리 집합의 입장에서 한번 따져보도록 하자. 
+
+$$
+\begin{aligned}
+P & = \{ x : |x - a| < \epsilon ~, \forall x \} \\
+Q & = \{ x : |f(x) - L| < \delta ~, \forall x \} 
+\end{aligned}
+$$
+
+함수 극한의 정의는 $P \subset Q$를 의미한다. 여기서 모든에 해당하는 것은 $x$이다. 엡실론-델타의 함수 극한 정의와 혼동하면 안되는 지점이다. 그러면, 엡실론-델타 정의의 $\forall$, $\exists$는 어디서 나오는 것일까? 정의에서 $P \subset Q$이므로 모든 $P$는 $Q$에 속해야 한다. 즉, $p$가 참이 되는 모든 경우에 대해서 $q$가 참이어야 한다. 
+
+이제 $\neg q$, 즉 $Q$를 보자.
+
+$$
+Q^C = \{ x: |f(x) - L| \geq \delta ~, \forall x  \}
+$$
+
+$p \to q$의 부정 명제는 $p \land \neg q$가 된다. 진리집합으로 본다면 다음과 같다; $P \cap Q^C$.
+
+:::{.column-margin}
+$p \to q \equiv \neg p \lor q$이다. 따라서 $\neg(\neg p \lor q)$가 부정 명제이다. 
+:::
+
 ## 그림으로 살펴보자. 
 
 조금 정확하지 않을 수 있지만 x가 스칼라 값일 때 $f(x)$를 통해서 위 경우를 한번 살펴보자. 
 
 
-::: {layout="[40, -10, 40]"}
-
+::: {layout="[30, -10, 30]"  layout-valign="bottom"}
 ![$f(x)$가 존재하는 경우](images/limf_1.jpg)
 
 ![$f(x)$가 존재하지 않는 경우](images/limf_2.jpg)
-
 :::
 
-$\lim_{x \to a} f(x)$가 존재하는 경우는 그림에서 보듯이 매핑되는 $|f(x)-L|$를 덮을 수 있는 $\delta$가 존재하는 경우이다. 이는 $\epsilon$이 아무리 작더라도 가능해야 한다. 한편 $\lim_{x \to a} f(x)$가 존재하지 않는 경우를 살펴보자. 그림에서 보듯이 L을 어떻게 설정하든지 $|f(x)-L| \geq \delta$가 성립하는 $\epsilon$의 구간을 쉽게 설정할 수 있다. 
+$\lim_{x \to a} f(x)$가 존재하는 경우를 살펴보자. $|x - a| < \epsilon$을 만족하는 모든 $x$에 대해서 $|f(x) - L| < \delta$를 만족하는 $\delta$가 존재해야 한다. 그림에서 보면 $\epsilon$의 크기와 무관하게 함수에 의해 매핑되는 $L$을 포함하는 $f(x)$의 범위를 덮을 수 있는 $\delta$가 존재하면 된다. 
 
-동어반복일 수 있지만, 반대로 생각해보면 정의를 이해하는 데 도움이 될 수 있다. 
+동어반복일 수 있지만, 반대로 생각해보면 함수 극한의 정의를 이해하는 데 도움이 될 수 있다. 
 
 ### 함수의 극한이 존재하는 경우
 
-$\lim_{x \to a} f(x)$이 존재하는 경우에 대해서 존재하지 않는 경우의 정의를 살펴보자. $\delta$를 아무리 작게 잡는다고 해도,$x$를 $a$에 접근시켜서 $|f(x)-L| \geq \delta$의 조건을 깰 수 있다. 따라서 이 경우 함수 극한 정의의 '부정'을 만족시키는 경우를 찾을 수 없다. 
+$\lim_{x \to a} f(x)$이 존재하는 경우에 대해서 존재하지 않는 경우의 정의를 살펴보자. $\delta$를 아무리 작게 잡는다고 해도,$x$를 $a$에 접근시켜서 $|f(x)-L| \geq \delta$의 조건을 깰 수 있다. 따라서 이 경우 $Q^C$를 만족하는 $\delta$를 찾을 수 없다. 
+
+:::{.column-margin}
+여기서 반대로 생각해보면 도움이 된다. $Q^C$ 즉 모든 $x$ s.t. $|x-a|<\epsilon$에 대해서 $|f(x) - L| \geq \delta$를 만족하는 $delta$가 있다고 하자. 이때 $x$를 $a$에 충분히 붙이게 되면 이 조건은 꺠지게 된다. 
+:::
 
 ### 함수의 극한이 존재하지 않는 경우 
 
-$L$이 $(f(a-\epsilon), f(a+\epsilon))$ 사이 어딘가에 존재한다면, $|L-f(a-\epsilon)|$과 $|L-f(a+\epsilon)|$ 중 작은 값을 $\delta'$이라고 하자. 이때 $\epsilon$을 아무리 $a$에 근접시킨다고 해도 $|f(x)-L| \geq \delta'$이 언제나 만족한다. 따라서 함수 극한의 정의를 만족하는 $\delta$를 찾을 수 없다. 이 경우 극한의 정의를 만족시키는 경우를 찾을 수 없다. 
+$L$이 $(f(a-\epsilon), f(a+\epsilon))$ 사이 어딘가에 존재한다고 하자. 이때  $|L-f(a-\epsilon)|$과 $|L-f(a+\epsilon)|$ 중 작은 값을 $\hat \delta$라고 하자. 이때 $x$가 $a$에 적당하게 접근하면 $|f(x)-L| \geq \hat \delta$는 항상 만족한다. 즉, $|x-a| < \epsilon$을 만족하는 $\epsilon$이 존재한다.  즉, $P \cap Q^c \neq \emptyset$가 성립한다. 
