--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -141,7 +141,7 @@ $\lim_{x \to a} f(x)$가 존재하는 경우를 살펴보자. $|x - a| < \epsilo
 $\lim_{x \to a} f(x)$이 존재하는 경우에 대해서 존재하지 않는 경우의 정의를 살펴보자. $\delta$를 아무리 작게 잡는다고 해도,$x$를 $a$에 접근시켜서 $|f(x)-L| \geq \delta$의 조건을 깰 수 있다. 따라서 이 경우 $Q^C$를 만족하는 $\delta$를 찾을 수 없다. 
 
 :::{.column-margin}
-여기서 반대로 생각해보면 도움이 된다. $Q^C$ 즉 모든 $x$ s.t. $|x-a|<\epsilon$에 대해서 $|f(x) - L| \geq \delta$를 만족하는 $delta$가 있다고 하자. 이때 $x$를 $a$에 충분히 붙이게 되면 이 조건은 꺠지게 된다. 
+여기서 반대로 생각해보면 도움이 된다. $Q^C$ 즉 모든 $x$ s.t. $|x-a|<\epsilon$에 대해서 $|f(x) - L| \geq \delta$를 만족하는 $\delta$가 있다고 하자. 이때 $x$를 $a$에 충분히 붙이게 되면 이 조건은 꺠지게 되고, 적절한 모든 $x$에 대해서 성립하는 $\delta$는 존재하지 않는다. 
 :::
 
 ### 함수의 극한이 존재하지 않는 경우 
