--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -81,7 +81,7 @@ lightbox: auto
 - $x \to a$ 일 때 함수 $f(x)$의 극한값을 $L$이라고 하자. 
 - $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 $\delta$보다 작아지는 $\delta$가 존재한다. 
 
-$\delta > 0$가 존재할 때, $x$를 $a$에 충분히 근접시켜서 $|f(x)| - L| < \delta$를 만족하는지를 확인한다고 생각하면 조금 이해가 쉽다. 사실 함축의 정의를 살펴보면, '모든($\forall$)', '존재한다($\exists$)'는 의미를 분명하게 전달하기 위한 사족이다.  
+$\delta > 0$가 존재할 때, $x$를 $a$에 충분히 근접시켜서 $|f(x)| - L| < \delta$를 만족하는지를 확인한다고 생각하면 조금 이해가 쉽다. 사실 조건 명제의 정의를 살펴보면 '모든($\forall$)', '존재한다($\exists$)'는 의미의 분명한 전달을 위해 붙은 논리 한정이다. 그런데 이 한정 조건 떄문에 이 명제의 가장 중요한 전제 조건을 망각하기 쉽다. 언제나 모든 $x$($\forall x$)가 가장 중요한 한정 조건임을 점을 기억하자. 
 
 ### 함수의 극한이 존재하지 않는 경우 
 
