--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -1,6 +1,6 @@
 ---
 title: 조건 명제 
-description:  $A \to B$ 의 의미를 새겨보자
+description:  P&rarr;Q&hairsp;를 새겨보자
 author: "JS HUHH"
 date: "06/26/2023"
 image: "images/proof.jfif"
@@ -123,7 +123,7 @@ $p \to q \equiv \neg p \lor q$이다. 따라서 $\neg(\neg p \lor q)$가 부정 
 
 ## 그림으로 살펴보자. 
 
-조금 정확하지 않을 수 있지만 x가 스칼라 값일 때 $f(x)$를 통해서 위 경우를 한번 살펴보자. 
+조금 정확하지 않을 수 있지만 $x \in \mathbb R$에서 정의되는 $f(x)$를 통해서 위 경우를 한번 살펴보자. 
 
 
 ::: {layout="[30, -10, 30]"  layout-valign="bottom"}
