--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -6,7 +6,7 @@ date: "06/26/2023"
 image: "images/proof.jfif"
 categories: [math-simple]
 #margin-header: subscribe.html
-draft: true
+draft: false
 filters:
    - lightbox
 lightbox: auto
@@ -36,9 +36,9 @@ lightbox: auto
 - If $p$, then $q$.
 - $p$ impies $q$
 
-일단 이 관계는 형식 논리상의 관계이지 인과관계는 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집함 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
+일단 이 관계는 형식 논리상의 관계이지 인과관계는 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집합 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
 
-조건 명제에는 숨은 '함정'이 있다. $p \to q$는 진리집합으로 본다면 $P$에 속하는 모든 원소는 $Q$에 속해야 한다는 뜻이다. 즉, $p$라는 명제를 만족하는 모든 경우에 대해서 $q$가 만족해야 한다. 조건 명제는 한정 기호를 함축하고 있는 것이다. 
+조건 명제에는 숨은 '함정'이 있다. $p \to q$는 진리집합으로 본다면 $P$에 속하는 모든 원소는 $Q$에 속해야 한다는 뜻이다. 즉, $p$라는 명제를 만족하는 모든 경우에 대해서 $q$가 만족해야 한다.
 
 ### 진리표 
 
@@ -62,61 +62,56 @@ lightbox: auto
 
 조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \to q$의 형태로 놓고 보면 부정 명제를 만들기 까다로울 수 있다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
 
-
-일단 직관적으로 생각해보자. 배중률에 따르면 $p \to q$가 성립하지 않는 경우가 단 1개라도 존재하면 해당 부정 명제가 참이 된다. 말로 푼다면, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \to q$가 '모든($\forall$)'이라는 한정 기호를 담고 있다면, 조건 명제의 부정은 '어떤($\exists$)'의 한정 기호를 지니고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
+직관적으로 생각해보자. 배중률에 따르면 $p \to q$가 성립하지 않는 경우가 단 1개라도 존재하면 해당 부정 명제가 참이 된다. 말로 푼다면, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \to q$가 '모든($\forall$)'이라는 한정 기호를 담고 있다면, 조건 명제의 부정은 '어떤($\exists$)'의 한정 기호를 지니고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
 
 ## 함수의 극한 
 
 '함수의 극한'의 정의에 관해서 살펴보자. 한번쯤 좌절해봤다는 엡실론-델타 정의는 다음과 같다. $\lim_{x \to a} f(x) = L$의 정의는 다음과 같다. 
 
-모든 $\epsilon > 0$에 대해서, 다음을 만족하는 $\delta > 0$가 존재한다; $0 < |x - a| < \epsilon$ $\to$ $|f(x)-L| < \delta$.
+모든 $\epsilon > 0$에 대해서, 다음을 만족하는 $\delta > 0$가 존재한다; $0 < |x - a| < \delta$ $\to$ $|f(x)-L| < \epsilon$.
 
 :::{.column-margin}
-영어로는 다음과 같다. For every $\epsilon > 0$, there exists $\delta > 0$ s.t. $0 < |x-a| < \epsilon$ implies $|f(x) - L| < \delta$. 논리 기호로 표현한다면, $\forall \epsilon>0, \exists \delta > 0$ s.t. $0 < |x-a| < \epsilon$ implies $|f(x)| - L| < \delta$.
+영어로는 다음과 같다. For all $\epsilon > 0$, there exists $\delta > 0$ s.t. $0 < |x-a| < \delta$ implies $|f(x) - L| < \epsilon$. 논리 기호로 표현한다면, $\forall \epsilon>0, \exists \delta > 0$ s.t. $0 < |x-a| < \delta$ implies $|f(x)| - L| < \epsilon$.
 :::
 
 쉽지 않지만 말로 풀어보자. 말이 지니는 모호함을 없애기 위해서 하나씩 끊어서 살펴보자. 
 
-- $a$ 주변으로 각 $\epsilon$ 크기의 구간을 잡는다.  
+- $a$ 주변으로 각 $\delta$ 크기의 구간을 잡는다.  
 - 해당 구간에 속하는 **모든** $x$를 고려하자. 
 - $x \to a$ 일 때 함수 $f(x)$의 극한값을 $L$이라고 하자. 
-- $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 $\delta$보다 작아지는 $\delta$가 존재한다. 
-
-$\delta > 0$가 존재할 때, $x$를 $a$에 충분히 근접시켜서 $|f(x)| - L| < \delta$를 만족하는지를 확인한다고 생각하면 조금 이해가 쉽다. 사실 조건 명제의 정의를 살펴보면 '모든($\forall$)', '존재한다($\exists$)'는 의미의 분명한 전달을 위해 붙은 논리 한정이다. 그런데 이 한정 조건 떄문에 이 명제의 가장 중요한 전제 조건을 망각하기 쉽다. 언제나 모든 $x$($\forall x$)가 가장 중요한 한정 조건임을 점을 기억하자. 
+- $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 임의의 $\epsilon(>0)$보다 작아야 한다. 
 
 ### 함수의 극한이 존재하지 않는 경우 
 
-함수의 극한에 관한 정의의 '부정(negation)'을 정의해보자. 그리고 이 부정의 정의가 참이 되는 경우를 따져볼 것이다. 정의가 함축($\to$)의 형태를 취하고 있으므로 이 부정형은 신중하게 다뤄야 한다.
+함수의 극한에 관한 정의의 '부정(negation)'을 정의해보자. 그리고 이 부정의 정의가 참이 되는 경우를 따져볼 것이다. 정의가 함축(implication, $\to$)의 형태를 취하고 있으므로 이 부정형을 조심히 다뤄보자.
 
-$|x-a|< \epsilon$을 만족하는 어떤 $\epsilon>0$에 대해서 다음을 만족하는 $\delta>0$가 존재한다; $|f(x) - L| \geq \delta$. 
+$|x-a|< \delta$을 만족하는 모든 $\delta(>0)$에 대해서 다음을 만족하는 어떤 $\epsilon(>0)$이 존재한다; $|f(x) - L| \geq \epsilon$. 
 
-역시 말로 풀기는 어렵겠지만 역시 이를 말로 풀어보자. 
+말로 풀기는 어렵겠지만 구별해서 풀어보자. 
 
-- $a$의 일정한 주변의 위치한 모든 $x$를 고려하자. 
-- $|f(x)-L|$ 값을 $\delta$ 보다 낮게 줄일 수 없다. 
+- $a$의 일정한 주변($\delta$의 크기)에 위치한 모든 $x$를 고려하자. 
+- $|f(x)-L|$ 값을 $\epsilon$ 보다 낮게 줄일 수 없다. 
 
 이 경우는 $\lim_{x \to a}f(x)$는 존재하지 않는다. 
 
 ## 진리 집합 
 
-조건 명제는 속임수를 품고 있을 수 있다. 진리 집합의 입장에서 한번 따져보도록 하자. 
+복습을 겸해서 진리 집합으로 다시 따져보도록 하자. 
 
 $$
 \begin{aligned}
-P & = \{ x : |x - a| < \epsilon ~, \forall x \} \\
-Q & = \{ x : |f(x) - L| < \delta ~, \forall x \} 
+P & = \{ x: \exists \delta \text{ s.t. } |x - a| < \delta \} \\
+Q & = \{ x: |f(x) - L| < \epsilon ~ \forall \epsilon \} 
 \end{aligned}
 $$
 
-함수 극한의 정의는 $P \subset Q$를 의미한다. 여기서 모든에 해당하는 것은 $x$이다. 엡실론-델타의 함수 극한 정의와 혼동하면 안되는 지점이다. 그러면, 엡실론-델타 정의의 $\forall$, $\exists$는 어디서 나오는 것일까? 정의에서 $P \subset Q$이므로 모든 $P$는 $Q$에 속해야 한다. 즉, $p$가 참이 되는 모든 경우에 대해서 $q$가 참이어야 한다. 
-
-이제 $\neg q$, 즉 $Q$를 보자.
+함수 극한의 정의는 $P \subset Q$를 의미한다. 이제 $\neg q$, 즉 $Q^C$를 보자.
 
 $$
-Q^C = \{ x: |f(x) - L| \geq \delta ~, \forall x  \}
+Q^C = \{ x: \exists \epsilon \text{ s.t. } |f(x) - L| \geq \epsilon \}
 $$
 
-$p \to q$의 부정 명제는 $p \land \neg q$가 된다. 진리집합으로 본다면 다음과 같다; $P \cap Q^C$.
+$p \to q$의 부정 명제는 $p \land \neg q$가 된다. 진리집합으로 본다면 다음과 같다; $P \cap Q^C$. 만일 이 집합이 공집합이 아니라면 정의상 함수의 극한은 존재하지 않는다. 
 
 :::{.column-margin}
 $p \to q \equiv \neg p \lor q$이다. 따라서 $\neg(\neg p \lor q)$가 부정 명제이다. 
@@ -124,8 +119,7 @@ $p \to q \equiv \neg p \lor q$이다. 따라서 $\neg(\neg p \lor q)$가 부정 
 
 ## 그림으로 살펴보자. 
 
-조금 정확하지 않을 수 있지만 $x \in \mathbb R$에서 정의되는 $f(x)$를 통해서 위 경우를 한번 살펴보자. 
-
+배경을 이루는 여러가지 조건을 생략하고 $x \in \mathbb R$에서 정의되는 $f(x)$를 통해서 위 경우를 그림을 통해 살펴보기로 하자.
 
 ::: {layout="[30, -10, 30]"  layout-valign="bottom"}
 ![$f(x)$가 존재하는 경우](images/limf_1.jpg)
@@ -133,24 +127,25 @@ $p \to q \equiv \neg p \lor q$이다. 따라서 $\neg(\neg p \lor q)$가 부정 
 ![$f(x)$가 존재하지 않는 경우](images/limf_2.jpg)
 :::
 
-$\lim_{x \to a} f(x)$가 존재하는 경우를 살펴보자. $|x - a| < \epsilon$을 만족하는 모든 $x$에 대해서 $|f(x) - L| < \delta$를 만족하는 $\delta$가 존재해야 한다. 그림에서 보면 $\epsilon$의 크기와 무관하게 함수에 의해 매핑되는 $L$을 포함하는 $f(x)$의 범위를 덮을 수 있는 $\delta$가 존재하면 된다. 
-
-동어반복일 수 있지만, 반대로 생각해보면 함수 극한의 정의를 이해하는 데 도움이 될 수 있다. 
-
 ### 함수의 극한이 존재하는 경우
 
-$\lim_{x \to a} f(x)$이 존재하는 경우에 대해서 존재하지 않는 경우의 정의를 살펴보자. $\delta$를 아무리 작게 잡는다고 해도,$x$를 $a$에 접근시켜서 $|f(x)-L| \geq \delta$의 조건을 깰 수 있다. 따라서 이 경우 $Q^C$를 만족하는 $\delta$를 찾을 수 없다. 
+$\lim_{x \to a} f(x)$가 존재하는 경우를 살펴보자. 문장으로는 이상하지만 이렇게 풀어 놓고 써보자. 모든 $x$에 대해서 만족한다는 것은 극한을 정의하기 위한 전제 조건이다. 
+
+- $p$: 다음 조건을 만족하는 $\delta$가 존재한다; $|x - a| < \delta$
+- $q$: 모든 $\epsilon$에 대해서 다음 조건을 만족한다; $|f(x) - L| < \epsilon$
+
+그림에서 보듯이 임의의 양의 $\epsilon$이 주어져 있을 때 $\delta$를 충분히 작게 택하여 $f(x)$와 $L$의 거리를 충분히 작게 만들 수 있다면, 함수의 극한값이 존재한다. 
 
 :::{.column-margin}
-여기서 반대로 생각해보면 도움이 된다. $Q^C$ 즉 모든 $x$ s.t. $|x-a|<\epsilon$에 대해서 $|f(x) - L| \geq \delta$를 만족하는 $\delta$가 있다고 하자. 이때 $x$를 $a$에 충분히 붙이게 되면 이 조건은 꺠지게 되고, 적절한 모든 $x$에 대해서 성립하는 $\delta$는 존재하지 않는다. 
+다소 동어반복이 될지는 모르겠지만 극한이 존재하지 않는 경우에 넣어서 따져보면 이해에 도움이 된다. 진리집합 $Q^C$ 즉 $|f(x) - L| \geq \epsilon$를 만족하는 $\epsilon$이 존재하고 이것이 해당 조건을 만족하는 모든 $x$에 대해서 성립한다고 하자. $x$를 $a$에 충분히 붙이게 되면 즉 $\delta$를 충분히 작게 잡으면 이 조건을 만족하는 $\epsilon$은 존재하지 않는다. 즉, $P \cap Q^C = \emptyset$이다. 
 :::
 
 ### 함수의 극한이 존재하지 않는 경우 
 
-$L$이 $(f(a-\epsilon), f(a+\epsilon))$ 사이 어딘가에 존재한다고 하자. 이때  $|L-f(a-\epsilon)|$과 $|L-f(a+\epsilon)|$ 중 작은 값보다 적당하게 작은 값을 $\hat \delta$라고 하자. 이때 $x$가 $a$에 적당하게 접근하면 $|f(x)-L| \geq \hat \delta$는 항상 만족한다. 즉, $|x-a| < \epsilon$을 만족하는 $\epsilon$이 존재한다.  즉, $P \cap Q^c \neq \emptyset$가 성립한다. 도움이 될지는 모르겠지만 그림으로 살펴보자. 
+$L$이 $(f(a-\delta), f(a+\delta))$ 사이 어딘가에 존재한다고 하자. 이때  $|L-f(a-\delta)|$과 $|L-f(a+\delta)|$ 중 작은 값보다 아주 작은 어떤 값을 $\hat \epsilon$이라고 하자. 이때 $|x-a|<\delta$를 만족하는 모든 $x$에 대해서 $|f(x)-L| \geq hat \epsilon$이 성립한다.  즉, $P \cap Q^c \neq \emptyset$.  
 
-![그림의 상황을 명제로 표현해보자; $|f(x)-L| \geq \hat\delta$ for all $x$ s.t. $|x-a| < \epsilon$](images/limf_3.jpg){width=70%}
+![그림의 상황을 명제로 표현해보자; $\exists\epsilon$ s.t. $|f(x)-L| \geq \delta$ for all $x$ s.t. $|x-a| < \delta$ for some $\delta$.](images/limf_3.jpg){width=70%}
 
-$f(x)$는 $x=a$ 주변에서 끊어져 있고, 이 간격과 $L$의 위치를 고려해서 $|f(x)-L| \geq \hat \delta$를 모든 $x$ s.t. $|x-a| < \epsilon$ 에 대해서 만족하는 $\hat \delta$를 찾을 수 있다. 
+$f(x)$는 $x=a$ 주변에서 끊어져 있고, 이 간격과 $L$의 위치를 고려해서 $|f(x)-L| \geq \epsilon$과 $|x-a| < \delta$를 만족하는 $\epsilon$과 $\delta$를 찾을 수 있다. 
 
 
