--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -68,6 +68,10 @@ lightbox: auto
 
 '함수의 극한'의 정의에 관해서 살펴보자. 한번쯤 좌절해봤다는 엡실론-델타 정의는 다음과 같다. $\lim_{x \to a} f(x) = L$의 정의는 다음과 같다. 
 
+:::{.column-margin}
+엡실론-델타의 정식화는 대략 코시(Cauchy)로 거슬러 올라간다. 그는 $\epsilon$을 error의 의미로 $\delta$를 distance의 의미로 썼다고 한다. 즉, 목표가 되는 타겟 $f(x)$의 '오차'를 일정한 범위 이하로 줄이기 위해 필요한 $a$ 주변의 '거리'로 느슨하게 외우면 괜찮을 듯 싶다. 
+:::
+
 > 모든 $\epsilon > 0$에 대해서, 다음을 만족하는 $\delta > 0$가 존재한다; $0 < |x - a| < \delta$ $\implies$ $|f(x)-L| < \epsilon$.
 
 영어로는 다음과 같다. 
