--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -62,7 +62,7 @@ lightbox: auto
 
 조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \implies q$의 형태로 놓고 보면 부정 명제를 만들기 까다로울 수 있다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
 
-직관적으로 생각해보자. 배중률에 따르면 $p \implies q$가 성립하지 않는 경우가 단 하나라도 존재하면 해당 부정형이 참이 된다. 즉, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \implies q$가 $\forall$)의 전칭 한정기호 지니고 있다면, 조건 명제의 부정은 '어떤($\exists$)'이라는 존재 한정 기호 지닌다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
+직관적으로 생각해보자. 배중률에 따르면 $p \implies q$가 성립하지 않는 경우가 단 하나라도 존재하면 해당 부정형이 참이 된다. 즉, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \implies q$에서 $p$가 $\forall$의 전칭 한정기호를 달고 있다면, 조건 명제의 부정형에서 $p$는 $\exists$의 존재 한정기호 달고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
 
 ## 함수의 극한 
 
