--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -31,7 +31,7 @@ lightbox: auto
 
 ![카디널 수에 따른 함수의 구분](images/four-functions.png){width=50%}
 
-단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)가 $x$보다 크지 않아야 한다. 즉, 
+단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 즉, 
 
 - 단사 함수: $|x| \leq |f(x)|$
 - 전사 함수: $|x| \geq |f(x)|$
