--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -42,7 +42,7 @@ lightbox: auto
 임의의 집합 $A$에 대해서 멱집합 $\mathcal P (A)$는 $A$보다 크다. 즉, 
 
 $$
-|\mathcal P(A)| > |A|
+|\mathcal P(A)| > |A|.
 $$
 
 ## Proof 
