--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -23,7 +23,14 @@ lightbox: auto
 
 ### Injection, Surjection, and Bijection 
 
-일대일 함수(one-to-one function) 혹은 단사 함수(injection), 전사 함수(onto function, surjection), 그리고 전단사 함수(bijection) 혹은 일대일 대응(one-to-one correspondence)로 함수를 분류할 수 있다. 
+카디널 수와 밀접하게 연결된 함수의 분류는 아래의 그림과 같다. 편의상 용어 및 번역어 정리하고 가자. 
+
+- 전사 함수(surjective function): onto function
+- 단사 함수(injective function): 일대일 함수(one-to-one function)
+- 전단사 함수(bijective function): 일대일 대응(one-to-one correspondence) one-to-one and onto 
+
+일대일 함수와 일대일 대응은 단사 함수와 전단사 함수의 차이와 같다. 
+
 
 :::{.column-margin}
 고등학교에서 함수를 배울 때 왜 "전사 함수", "단사 함수" 구별이 필요하지라는 의문을 가져 본 적이 있다. 이러한 분류가 카디널 수를 따질 결정적일 수 있다는 것은 뒤늦은 깨달음이리라... 
