--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -15,7 +15,7 @@ lightbox: auto
 ## Prelim
 
 ### Cardinality
-집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 것의 의미는 자명하다. 무한 집합이 크다는 것은 어떻게 측정할 수 있을까? 일단 무한 집합에 대해서는 원소의 개수라는 개념을 쓸 없으니 대신 카디널 수(cardinality)라는 용어를 쓴다. 즉, 집합 $A$의 카디널 수는 $c(A)$이다. 무한 집합 $A$에 대해서 $|A|$라고 쓰는 이는 카디널 수를 의미한다. 
+집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 것의 의미는 자명하다. 무한 집합이 크다는 것은 어떻게 측정할 수 있을까? 일단 무한 집합에 대해서는 원소의 개수라는 개념을 쓸 없으니 대신 카디널 수(cardinality)를 쓴다. 무한 집합 $A$에 대해서 $|A|$라고 쓸 경우 이는 무한 집합의 크기, 즉 카디널 수를 의미한다. 
 
 :::{.column-margin}
 카디널 수에서 기준이 되는 것은 자연수의 집합이다. 자연수($\mathbb N$)는 가장 작은 무한 집합이다. 이 점을 기억하자. 
@@ -38,10 +38,10 @@ lightbox: auto
 
 ![카디널 수에 따른 함수의 구분](images/four-functions.png){width=50%}
 
-단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 즉, 
+단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 해당 형태의 함수가 존재할 필요 조건은 다음과 같다.  
 
-- 단사 함수: $|x| \leq |f(x)|$
 - 전사 함수: $|x| \geq |f(x)|$
+- 단사 함수: $|x| \leq |f(x)|$
 - 전단사 함수: $|x| = |f(x)|$
 
 ## Theorem 
