--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -80,10 +80,10 @@ $B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다
 $a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나에 해당해야 한다(배중률의 공리). 각각의 경우를 살펴보자. 
 
 
-1. $a \in B$; 이것이 맞다면, $a \in f(a)$가 성립한다. 그런데 정의에 따르면 $B$는 $a \notin B$이다. 따라서 모순이다. 
+1. $a \in B$; 이것이 맞다면, $a \in f(a)$가 성립한다. 그런데 정의에 따르면 $B$는 $a \notin f(a) = B$이다. 따라서 모순이다. 
 2. $a \notin B$; 이것이 맞다면, $a \notin f(a)$가 성립한다. 그런데 정의에 따르면 $a \in B$가 되어야 한다. 따라서 모순이다. 
 
-두 경우 모두 모순이 된다. 따라서 $|A| \neq |\mathcal P(A)|$가 된다. 앞서의 단사함수의 존재 증명과 결합하면 집합의 크기에 관해 칸토어의 정리가 성립한다; 
+두 경우 모두 모순이 된다. 귀류법에 따라서, $|A| \neq |\mathcal P(A)|$가 성립한다. 앞서의 단사함수의 존재 증명과 결합하면 집합의 크기에 관해 칸토어의 정리가 성립한다; 
 
 $$
 |A| < |\mathcal P (A)|.
